home/iptables_folder/ip6tables
# iptables rules
# replace enp0s3 with enp0s3(or ethernet device. find that with ifconfig)
# sudo iptables -F && sudo iptables -X
# iptables-restore < /tmp/iptables-ip4
# /sbin/iptables-save

*filter

# Default Chain Policies
#-P INPUT DROP
#-P FORWARD DROP
#-P OUTPUT DROP

# Allow  Incoming HTTP & HTTPS
-A INPUT -i enp0s3 -p tcp --dport 80 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -o enp0s3 -p tcp --sport 80 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -i enp0s3 -p tcp --dport 443 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -o enp0s3 -p tcp --sport 443 -m state --state ESTABLISHED -j ACCEPT

# Allow Outgoing HTTP & HTTPS
-A OUTPUT -o enp0s3 -p tcp --dport 80 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -i enp0s3 -p tcp --sport 80 -m state --state ESTABLISHED -j ACCEPT
-A OUTPUT -o enp0s3 -p tcp --dport 443 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -i enp0s3 -p tcp --sport 443 -m state --state ESTABLISHED -j ACCEPT

# Allow Ping From Inside to Outside
#-A OUTPUT -p icmp --icmp-type echo-request -j ACCEPT
#-A INPUT -p icmp --icmp-type echo-reply -j ACCEPT

# Allow Loopback Access
-A INPUT -i lo -j ACCEPT
-A OUTPUT -o lo -j ACCEPT

# Allow outbound DNS
-A OUTPUT -p udp -o enp0s3 --dport 53 -j ACCEPT
-A INPUT -p udp -i enp0s3 --sport 53 -j ACCEPT

# Open KeyserversPort
-A OUTPUT -o enp0s3 -p tcp --dport 11371 -j ACCEPT
-A INPUT -i enp0s3 -p tcp --dport 11371 -j ACCEPT

# Allow Rsync
-A INPUT -i enp0s3 -p tcp --sport 873 -m state --state ESTABLISHED,RELATED -j ACCEPT
-A OUTPUT -o enp0s3 -p tcp --dport 873 -m state --state NEW,ESTABLISHED -j ACCEPT

# Allow Portage Mirror Acces
#-A OUTPUT -o enp0s3 -p tcp -d gentoo.mirrors.easynews.com --dport 80 -j ACCEPT
#-A OUTPUT -o enp0s3 -p tcp -d www.gtlib.gatech.edu --dport 80 -j ACCEPT
#-A OUTPUT -o enp0s3 -p tcp -d lug.mtu.edu --dport 80 -j ACCEPT
#-A OUTPUT -o enp0s3 -p tcp -d gentoo.cs.uni.edu --dport 80 -j ACCEPT
#-A INPUT -i enp0s3 -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT

# Allow ntp Clock
-A OUTPUT -p udp --dport 123 -j ACCEPT
-A INPUT -p udp --sport 123 -j ACCEPT

# Allow TOR Access??
-A OUTPUT -o enp0s3 -p tcp --dport 9150 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -i enp0s3 -p tcp --sport 9150 -m state --state ESTABLISHED,RELATED -j ACCEPT

# Allow Sendmail or Postfix
-A INPUT -i enp0s3 -p tcp --dport 25 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -o enp0s3 -p tcp --sport 25 -m state --state ESTABLISHED -j ACCEPT

# Allow IMAP & IMAPS
-A INPUT -i enp0s3 -p tcp --dport 143 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -o enp0s3 -p tcp --sport 143 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -i enp0s3 -p tcp --dport 993 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -o enp0s3 -p tcp --sport 993 -m state --state ESTABLISHED -j ACCEPT

# Allow POP3 & POP3S
-A INPUT -i enp0s3 -p tcp --dport 110 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -o enp0s3 -p tcp --sport 110 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -i enp0s3 -p tcp --dport 995 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -o enp0s3 -p tcp --sport 995 -m state --state ESTABLISHED -j ACCEPT

# Prevent DoS Attack
-A INPUT -p tcp --dport 80 -m limit --limit 25/minute --limit-burst 100 -j ACCEPT

# Dropping All Other Traffic
-A INPUT -j DROP
-A OUTPUT -j DROP
-A FORWARD -j DROP

COMMIT
